added a function to update total characters counter

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
           Total Characters: <span id="total-characters-counter">0</span>
         </p>
         <p id="remaining-characters-para">
-          Remaining Characters: <span id="remaing-characters-counter">0</span>
+          Remaining:
+          <span id="remaining-characters-counter">100</span>
         </p>
       </div>
     </main>
