--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       ></textarea>
       <div id="counter-container">
         <p id="total-characters-para">
-          Total Characters: <span id="total-characters-counter">0</span>
+          Total Characters: <span id="total-characters-counter"></span>
         </p>
         <p id="remaining-characters-para">
           Remaining:
-          <span id="remaining-characters-counter">100</span>
+          <span id="remaining-characters-counter"></span>
         </p>
       </div>
     </main>
