added media queries

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       ></textarea>
       <div id="counter-container">
         <p id="total-characters-para">
-          Total Characters: <span id="total-characters-counter"></span>
+          Total: <span id="total-characters-counter"></span>
         </p>
         <p id="remaining-characters-para">
           Remaining:
